# breakout_redux

./: .gitignore  CMakeLists.txt  LICENSE  README.md  architecture.drawio  build.bat
assets/levels/: level_1.lvl  level_2.lvl  level_3.lvl  level_4.lvl  level_5.lvl
assets/shaders/: particle.shader  postProcess.shader  sprite.shader  text.shader
dependencies/GLAD/: glad.h
dependencies/GLFW/: glfw3.lib
dependencies/freetype/: freetyped.lib
dependencies/stb_image/: stb.image.h
src/: Debug.cpp  Debug.h  ball.cpp  ball.h  brick.cpp  brick.h  buffManager.cpp  buffManager.h  collision.cpp  collision.h  collisionObj.cpp  collisionObj.h  game.cpp  game.h  glad.c  keyboard.cpp  keyboard.h  keyboardObj.cpp  keyboardObj.h  keyval.h  level.cpp  level.h  logger.cpp  logger.h  mString.cpp  mString.h  main.cpp  menu.cpp  menu.h  moveObj.cpp  moveObj.h  movement.cpp  movement.h  object.h  pad.cpp  pad.h  particle_generator.cpp  particle_generator.h  player.cpp  player.h  (+18 more)
src/engines/: buffManager.cpp  buffManager.h  collision.cpp  collision.h  keyboard.cpp  keyboard.h  movement.cpp  movement.h  particle_generator.cpp  particle_generator.h  renderer.cpp  renderer.h  soundEngine.cpp  soundEngine.h
src/game/: game.cpp  game.h  level.cpp  level.h  menu.cpp  menu.h  player.cpp  player.h
src/obj_for_engines/: keyboardObj.cpp  keyboardObj.h  moveObj.cpp  moveObj.h  renderObj.cpp  renderObj.h
src/objects/: ball.cpp  ball.h  brick.cpp  brick.h  object.h  pad.cpp  pad.h
src/resource_manage/: logger.h  resource_loading.json  resource_manager.cpp  resource_manager.h
src/utils/: check.h  debug.cpp  debug.h  keyval.h  pch.h  random.h  shader.cpp  shader.h  texture.cpp  texture.h
